--- a/css/studentWaitingRoom.css
+++ b/css/studentWaitingRoom.css
@@ -1,18 +1,61 @@
 /* CSS File for Username Centering and Color Change */
 
 /* Centering the usernames */
+
+@keyframes floatEffect {
+  0% {
+      transform: translateY(0px);
+  }
+  50% {
+      transform: translateY(-10px);
+  }
+  100% {
+      transform: translateY(0px);
+  }
+}
+
 div[style*="text-align: center; color: black; font-size: 24px; font-family: Roboto; font-weight: 400;"] {
     left: 80%;
     transform: translateX(-50%);
   }
 
-  /* Hide the scrollbar */
-  body{
-    overflow: hidden;
-      }  
+/* Hide the scrollbar */
+body{
+overflow: hidden;
+}  
 
+.usernames-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 50vh;
+    flex-direction: row;
+}
 
-  /* Change the color of the usernames if necessary */
-  .username {
-    color: black; /* Default color */
-  }
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.username {
+    animation: floatEffect 3s infinite;
+    transition-timing-function: ease-in-out;
+    margin: 10px;
+    color: black;
+    font-size: 24px;
+    font-family: Roboto;
+    font-weight: 400;
+    text-align: center;
+    box-shadow: 0px 10px 15px -10px rgba(0, 0, 0, 1);
+}
+
+.header {
+    text-align: center;
+    color: #00447C;
+    font-size: 40px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+    
